--- a/index.html
+++ b/index.html
@@ -9,19 +9,18 @@
 <body>
 <h1>Our Menu</h1>
 
-<div class="row">
-  <div class="col-lg-4 col-md-6 col-sm-12 card" id="b1">
-    <div id="t1"><p id="p1">Chicken</p></div>
+  <section class="col-lg-4 col-md-6">
+    <div><p class="items" id="p1">Chicken</p></div>
     <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-  </div>
-  <div class="col-lg-4 col-md-6 col-sm-12 card" id="b2">
-    <div id="t2"><p id="p2">Beef</p></div>
+  </section>
+  <section class="col-lg-4 col-md-6">
+    <div><p class="items" id="p2">Beef</p></div>
     <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-  </div>
-  <div class="col-lg-4 col-md-12 col-sm-12 card" id="b3">
-    <div id="t3"><p id="p3">Sushi</p></div>
-    <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></div>
-</div>
+  </section>
+  <section class="col-lg-4 col-md-12">
+    <div><p class="items" id="p3">Sushi</p></div>
+    <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  </section>
 
 </body>
 </html>
